# cuda-ipc-weight-sharing

./: .gitignore  README.md  pyproject.toml
docs/: gpu-memory-sharing-research.md
scripts/: run_inference_worker.py  run_verification.py  run_weight_manager.py
src/cuda_ipc_poc/: config.py  handle_codec.py  inference_worker.py  ipc_channel.py  model.py  model_spec.py  tensor_parallel.py  tp_handler.py  weight_manager.py
src/cuda_ipc_poc/models/: __init__.py  tiny_llama.py
tests/: test_handle_codec.py  test_ipc_channel.py  test_model_spec.py  test_tensor_parallel.py  test_tiny_transformer.py
