[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-ipc-poc"
version = "0.1.0"
description = "CUDA IPC GPU Memory Sharing PoC - zero-copy weight sharing between processes"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "psutil",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
vision = ["torchvision"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
